--- a/Views/Home/Product.cshtml
+++ b/Views/Home/Product.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MvcLaptop.Models.Laptop>
+@model IEnumerable<MvcLaptop.Models.Product>
 @{
     ViewData["Title"] = "Product";
 }
@@ -15,10 +15,10 @@
         @foreach (var item in Model)
         {
             <a asp-action="Details" asp-route-id="@item.Id" class="product-card">
-                <img src="@item.ImageUrl" alt="@item.Title" class="product-image" />
+                <img src="@item.ProductImages!.FirstOrDefault(img => img.IsMainImage)?.ImageUrl" alt="@item.Title" class="product-image" />
                 <h3 class="product-title">@item.Title</h3>
-                <p class="product-genre">@item.Genre</p>
-                <p class="product-price">$@item.Price</p>
+                <p class="product-genre">@item.Category?.Name_Category</p>
+                <p class="product-price">@item.FormattedPrice</p>
             </a>
         }
     </div>
