--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -2,28 +2,26 @@
 @{
     ViewData["Title"] = "Login";
 }
-<h1 align="center">Đăng nhập</h1>
-<div class="row"  >
-    <div class="col-md-4" style="position: relative; left: 420px;">
-        <form asp-action="Login" >
-            <div   asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div  class="form-group">
-                <label asp-for="UserName" class="control-label">Tên đăng nhập</label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label">Mật khẩu</label>
-                <input type="password" asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div style="position: relative; margin: 10px;" align="center"class="form-group">
-                <input type="submit" value="Đăng nhập" class="btn btn-primary" />
-            </div>
-        </form>
-        <div>Bạn chưa có tài khoản?</div>
-        <div>
-            <a asp-controller="Home" asp-action="Register">Đăng ký ngay</a>
+<div class="login-container">
+    <h1>Đăng nhập</h1>
+    <form asp-action="Login">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="UserName" class="control-label">Tên đăng nhập</label>
+            <input asp-for="UserName" class="form-control" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <label asp-for="Password" class="control-label">Mật khẩu</label>
+            <input type="password" asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div class="form-group text-center">
+            <input type="submit" value="Đăng nhập" class="btn btn-primary" />
+        </div>
+    </form>
+    <div class="register-link text-center">
+        <p>Bạn chưa có tài khoản? <a asp-controller="Home" asp-action="Register">Đăng ký ngay</a></p>
+        
     </div>
 </div>
