--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                     <img src="@item.ProductImages!.FirstOrDefault(img => img.IsMainImage)?.ImageUrl" alt="@item.Title" class="hot-new-image" />
                     <div class="hot-new-info">
                         <h3 class="hot-new-title">@item.Title</h3>
-                        <p class="hot-new-price">$@item.Price</p>
+                        <p class="hot-new-price">@item.FormattedPrice</p>
                     </div>
                 </a>
             </div>
