--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -245,8 +245,9 @@ sup {
 }
 
 a {
-  color: var(--bs-link-color);
-  text-decoration: underline;
+  /* color: var(--bs-link-color); */
+  color: #2d3436;
+  text-decoration: none;
 }
 a:hover {
   color: var(--bs-link-hover-color);
