--- a/Areas/Admin/Views/Laptops/Create.cshtml
+++ b/Areas/Admin/Views/Laptops/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories ?? new SelectList(new List<Category>())"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" value="@Model.Price.ToString("#,0")" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
