--- a/Areas/Admin/Views/Laptops/Index.cshtml
+++ b/Areas/Admin/Views/Laptops/Index.cshtml
@@ -6,9 +6,11 @@
 
 <div class="container-fluid">
     <h1 class="mt-4">Danh sách sản phẩm</h1>
-    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" style="float: right" asp-area="Admin" asp-controller="Laptops" asp-action="Index" method="get">
+    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" style="float: right"
+        asp-area="Admin" asp-controller="Laptops" asp-action="Index" method="get">
         <div class="input-group">
-            <input class="form-control" type="text" name="searchString" value="@ViewData["SearchString"]" placeholder="Tên máy" />
+            <input class="form-control" type="text" name="searchString" value="@ViewData["SearchString"]"
+                placeholder="Tên máy" />
             <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
@@ -17,12 +19,15 @@
     </p>
     <div class="table-responsive">
         <table class="table table-striped" border="1">
-            <thead class="text-center">
+            <thead class="text-left">
                 <tr>
-                    <th><a asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayNameFor(model => model.First().Title)</a></th>
+                    <th><a asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayNameFor(model =>
+                            model.First().Title)</a></th>
                     <th>@Html.DisplayNameFor(model => model.First().CategoryId)</th>
-                    <th><a asp-route-sortOrder="@ViewData["QuantitySortParm"]">@Html.DisplayNameFor(model => model.First().Quantity)</a></th>
-                    <th><a asp-route-sortOrder="@ViewData["PriceSortParm"]">@Html.DisplayNameFor(model => model.First().Price)</a></th>
+                    <th><a asp-route-sortOrder="@ViewData["QuantitySortParm"]">@Html.DisplayNameFor(model =>
+                            model.First().Quantity)</a></th>
+                    <th><a asp-route-sortOrder="@ViewData["PriceSortParm"]">@Html.DisplayNameFor(model =>
+                            model.First().Price)</a></th>
                     <th>@Html.DisplayNameFor(model => model.First().ImageUrl)</th>
                     <th>Actions</th>
                 </tr>
@@ -59,19 +64,19 @@
         </table>
     </div>
     <!-- Điều hướng phân trang -->
+    @{
+        var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+        var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+    }
     <div class="pagination-container">
-        <a asp-action="Index"
-           asp-route-sortOrder="@ViewData["CurrentSort"]"
-           asp-route-pageNumber="@(Model.PageIndex - 1)"
-           asp-route-currentFilter="@ViewData["CurrentFilter"]"
-           class="btn btn-default @(Model.HasPreviousPage ? "" : "disabled")">
+        <a asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]"
+            asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]"
+            class="btn btn-default @prevDisabled">
             Trước
         </a>
-        <a asp-action="Index"
-           asp-route-sortOrder="@ViewData["CurrentSort"]"
-           asp-route-pageNumber="@(Model.PageIndex + 1)"
-           asp-route-currentFilter="@ViewData["CurrentFilter"]"
-           class="btn btn-default @(Model.HasNextPage ? "" : "disabled")">
+        <a asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]"
+            asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]"
+            class="btn btn-default @nextDisabled">
             Tiếp
         </a>
     </div>
